# src/bpmn/handlers/common/state.js
@@ -37,6 +37,8 @@ export const PUBLIC_STATE_SCHEMA = Joi.object({
     userCarrierProfileId: Joi.string().allow(null),
     verificationProfileId: Joi.string().allow(null),
     voiceProfileId: Joi.string().allow(null),
+    smsServicePlanId: Joi.string().allow(null),
+    smsRealmId: Joi.string().allow(null),
   }).options({ presence: 'required' }),
   errors: Joi.array().items(PUBLIC_ERROR_SCHEMA),
 });
@@ -64,4 +66,6 @@ export const DEFAULT_PUBLIC_STATE = {
   userCarrierProfileId: null,
   verificationProfileId: null,
   voiceProfileId: null,
+  smsServicePlanId: null,
+  smsRealmId: null,
 };
